hphp/test/slow/inout/bad-mixed-mode-1.php.expectf

Fatal error: Functions may not use both reference and inout parameters in %s/bad-mixed-mode-1.php on line 3
